--- a/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
@@ -44,10 +44,10 @@
             </objects>
             <point key="canvasLocation" x="221" y="-534"/>
         </scene>
-        <!--Table View Controller - Item-->
+        <!--Third View Controller - Third-->
         <scene sceneID="t4M-iH-3Em">
             <objects>
-                <tableViewController id="vHQ-47-dOi" sceneMemberID="viewController">
+                <tableViewController title="Third" id="vHQ-47-dOi" userLabel="Third View Controller - Third" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="hmq-br-RtV">
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,7 +77,7 @@
         <!--Second View Controller - Second-->
         <scene sceneID="13">
             <objects>
-                <viewController title="Second" id="3" customClass="SecondViewController" sceneMemberID="viewController">
+                <viewController title="Second" wantsFullScreenLayout="YES" id="3" customClass="SecondViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="17">
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -112,10 +112,10 @@
             </objects>
             <point key="canvasLocation" x="221" y="160"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab Bar Controller - Initial Screen-->
         <scene sceneID="15">
             <objects>
-                <tabBarController id="4" sceneMemberID="viewController">
+                <tabBarController title="Initial Screen" id="4" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="5">
                         <rect key="frame" x="0.0" y="431" width="320" height="49"/>
