--- a/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
@@ -82,35 +82,47 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="22">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" bouncesZoom="NO" editable="NO" text="Loaded by the second view controller — an instance of SecondViewController — specified in the app delegate." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="23">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="QWx-Vh-BVe">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="88" id="cQR-IW-sY8"/>
+                                    <constraint firstAttribute="height" constant="600" id="vug-IX-g3F"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" size="system"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3" id="PVX-4w-zFw"/>
+                                </connections>
+                            </mapView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Vky-H4-iP0"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2bN-sy-bwO">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="179" id="MOI-wM-hB2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                            </textView>
+                                <connections>
+                                    <outlet property="delegate" destination="3" id="dab-bj-NBR"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.65190330898844895" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="22" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="0q6-IA-e8m"/>
-                            <constraint firstItem="22" firstAttribute="top" secondItem="17" secondAttribute="top" constant="29" id="BqA-py-nUj"/>
-                            <constraint firstAttribute="trailing" secondItem="23" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="fR4-wH-Ih7"/>
-                            <constraint firstItem="23" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="fzb-YA-SeR"/>
-                            <constraint firstItem="23" firstAttribute="top" secondItem="17" secondAttribute="top" constant="206" id="lca-rE-agc"/>
-                            <constraint firstAttribute="trailing" secondItem="22" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="pc3-9Y-W42"/>
+                            <constraint firstItem="2bN-sy-bwO" firstAttribute="centerX" secondItem="Vky-H4-iP0" secondAttribute="centerX" type="default" id="5Oj-Be-02c"/>
+                            <constraint firstItem="2bN-sy-bwO" firstAttribute="top" secondItem="17" secondAttribute="top" constant="53" id="Aec-lv-fcn"/>
+                            <constraint firstItem="QWx-Vh-BVe" firstAttribute="centerX" secondItem="2bN-sy-bwO" secondAttribute="centerX" type="default" id="HL4-SE-ONE"/>
+                            <constraint firstItem="Vky-H4-iP0" firstAttribute="top" secondItem="17" secondAttribute="top" constant="109" id="dgS-cA-lu0"/>
+                            <constraint firstItem="QWx-Vh-BVe" firstAttribute="leading" secondItem="17" secondAttribute="leading" type="default" id="fzj-U9-qZ4"/>
+                            <constraint firstItem="QWx-Vh-BVe" firstAttribute="top" secondItem="17" secondAttribute="top" constant="-50" id="kNc-vw-CBB"/>
+                            <constraint firstItem="QWx-Vh-BVe" firstAttribute="trailing" secondItem="17" secondAttribute="trailing" type="default" id="u1e-h5-wpJ"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="calendar.png" id="6"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="Vky-H4-iP0" id="tqh-hY-CDv"/>
+                        <outlet property="locationTitleField" destination="2bN-sy-bwO" id="TD0-QM-50X"/>
+                        <outlet property="worldView" destination="QWx-Vh-BVe" id="vyj-gx-JJr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-507" y="512"/>
+            <point key="canvasLocation" x="-507" y="562"/>
         </scene>
         <!--Tab Bar Controller - Initial Screen-->
         <scene sceneID="15">
@@ -137,17 +149,6 @@
         <image name="calendar.png" width="512" height="512"/>
         <image name="first" width="16" height="16"/>
     </resources>
-    <classes>
-        <class className="FirstViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FirstViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="SecondViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SecondViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
