--- a/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
@@ -48,26 +48,6 @@
         <scene sceneID="t4M-iH-3Em">
             <objects>
                 <tableViewController title="Third" id="vHQ-47-dOi" userLabel="Third View Controller - Third" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="hmq-br-RtV">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ASZ-yH-QBI">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="vHQ-47-dOi" id="fgd-CV-eaQ"/>
-                            <outlet property="delegate" destination="vHQ-47-dOi" id="ufv-eK-jQh"/>
-                        </connections>
-                    </tableView>
                     <tabBarItem key="tabBarItem" title="Item" id="v1g-qh-4EI"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QSd-0c-Tk5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -82,30 +62,30 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="QWx-Vh-BVe">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QWx-Vh-BVe">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="600" id="vug-IX-g3F"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="delegate" destination="3" id="PVX-4w-zFw"/>
+                                    <outlet property="delegate" destination="3" id="zx2-ZP-bgs"/>
                                 </connections>
                             </mapView>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Vky-H4-iP0"/>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2bN-sy-bwO">
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Vky-H4-iP0"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2bN-sy-bwO">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="179" id="MOI-wM-hB2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <outlet property="delegate" destination="3" id="dab-bj-NBR"/>
+                                    <outlet property="delegate" destination="3" id="BqJ-rV-HDD"/>
                                 </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.65190330898844895" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="2bN-sy-bwO" firstAttribute="centerX" secondItem="Vky-H4-iP0" secondAttribute="centerX" type="default" id="5Oj-Be-02c"/>
-                            <constraint firstItem="2bN-sy-bwO" firstAttribute="top" secondItem="17" secondAttribute="top" constant="53" id="Aec-lv-fcn"/>
+                            <constraint firstItem="2bN-sy-bwO" firstAttribute="top" secondItem="17" secondAttribute="top" constant="36" id="Dxl-AO-bBT"/>
                             <constraint firstItem="QWx-Vh-BVe" firstAttribute="centerX" secondItem="2bN-sy-bwO" secondAttribute="centerX" type="default" id="HL4-SE-ONE"/>
                             <constraint firstItem="Vky-H4-iP0" firstAttribute="top" secondItem="17" secondAttribute="top" constant="109" id="dgS-cA-lu0"/>
                             <constraint firstItem="QWx-Vh-BVe" firstAttribute="leading" secondItem="17" secondAttribute="leading" type="default" id="fzj-U9-qZ4"/>
@@ -115,9 +95,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="calendar.png" id="6"/>
                     <connections>
-                        <outlet property="activityIndicator" destination="Vky-H4-iP0" id="tqh-hY-CDv"/>
-                        <outlet property="locationTitleField" destination="2bN-sy-bwO" id="TD0-QM-50X"/>
-                        <outlet property="worldView" destination="QWx-Vh-BVe" id="vyj-gx-JJr"/>
+                        <outlet property="activityIndicator" destination="Vky-H4-iP0" id="iz8-DP-DFa"/>
+                        <outlet property="locationTitleField" destination="2bN-sy-bwO" id="tv5-Zd-Hdy"/>
+                        <outlet property="worldView" destination="QWx-Vh-BVe" id="S3H-Lg-xRL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12" sceneMemberID="firstResponder"/>
@@ -146,9 +126,25 @@
         </scene>
     </scenes>
     <resources>
-        <image name="calendar.png" width="512" height="512"/>
+        <image name="calendar.png" width="16" height="16"/>
         <image name="first" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="FirstViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FirstViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SecondViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SecondViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="activityIndicator" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="locationTitleField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="worldView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
