--- a/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
@@ -102,7 +102,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="12" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-507" y="562"/>
+            <point key="canvasLocation" x="-517" y="512"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9G2-xH-6Ny">
+            <objects>
+                <viewController id="gB6-Bs-bbd" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0cw-IR-B6d">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fBg-0g-okn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1711" y="504"/>
         </scene>
         <!--Tab Bar Controller - Initial Screen-->
         <scene sceneID="15">
@@ -122,7 +136,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1370" y="512"/>
+            <point key="canvasLocation" x="-1170" y="504"/>
         </scene>
     </scenes>
     <resources>
