--- a/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FitnessBuddy/FitnessBuddy/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HkP-eK-Cgr">
     <dependencies>
         <development version="4600" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
@@ -124,6 +124,29 @@
             </objects>
             <point key="canvasLocation" x="-507" y="562"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="iSb-bl-52r">
+            <objects>
+                <viewController id="HkP-eK-Cgr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZrT-0q-8d9">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="blue_stripes.png" translatesAutoresizingMaskIntoConstraints="NO" id="inV-DE-TBS"/>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="inV-DE-TBS" firstAttribute="trailing" secondItem="ZrT-0q-8d9" secondAttribute="trailing" type="default" id="Icc-lI-CCp"/>
+                            <constraint firstItem="inV-DE-TBS" firstAttribute="leading" secondItem="ZrT-0q-8d9" secondAttribute="leading" type="default" id="Nuc-Qw-R3C"/>
+                            <constraint firstItem="inV-DE-TBS" firstAttribute="bottom" secondItem="ZrT-0q-8d9" secondAttribute="bottom" type="default" id="WwQ-gT-dQu"/>
+                            <constraint firstItem="inV-DE-TBS" firstAttribute="top" secondItem="ZrT-0q-8d9" secondAttribute="top" type="default" id="rO1-Zp-ySB"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2ba-q8-D3X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1885" y="512"/>
+        </scene>
         <!--Tab Bar Controller - Initial Screen-->
         <scene sceneID="15">
             <objects>
@@ -146,9 +169,26 @@
         </scene>
     </scenes>
     <resources>
+        <image name="blue_stripes.png" width="100" height="100"/>
         <image name="calendar.png" width="512" height="512"/>
         <image name="first" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="FirstViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FirstViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SecondViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SecondViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="activityIndicator" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="locationTitleField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="worldView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
